"use strict" can not contain escape sequences or line continuation https://bugs.webkit.org/show_bug.cgi?id=71532

Reviewed by Darin Adler.

Source/JavaScriptCore:

Store the actual literal length (before the escapes and line
continuation are encoded) while parsing the directive and use it
for the directive comparison.

* parser/Parser.cpp:
(JSC::Parser::parseSourceElements):
(JSC::Parser::parseStatement):
* parser/Parser.h:

LayoutTests:

* fast/js/basic-strict-mode-expected.txt:
* fast/js/script-tests/basic-strict-mode.js:
(testLineContinuation): Added.
(testEscapeSequence): Added.

Canonical link: https://commits.webkit.org/88086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99513 268f45cc-cd09-0410-ab3c-d52691b4dbfc